@@ -1,9 +1,7 @@
 <?php
-namespace eve\elements
+namespace eve\elements;
+
+class CapitalShip extends \eve\elements\Ship
 {
-	class CapitalShip extends \eve\elements\Ship
-	{
-		public $whereQuery = "WHERE groupid IN (30,547,898,485,902,659)";
-	}
+
 }
-?>
