@@ -1,0 +1,40 @@
+<div class="content">
+	<h1>My Capital Ships</h1>
+
+	<div style="text-align: right; margin-bottom: 1em;">
+		<button type="button" onclick="document.location='/profile/capitals/edit/new'">
+			Add Capital ship
+		</button>
+	</div>
+	<table class="sectionoverview">
+		<tr>
+			<th style="width: 200px;">Ship</th>
+			<th style="width: 150px;">Location</th>
+			<th>Description</th>
+			<th style="width: 50px;"></th>
+		</tr>
+	{foreach from=$capitals key=i item=cap}
+		<tr class="{if $i%2==0}even{else}odd{/if}">
+			<td onclick="document.location='/profile/capitals/edit/{$cap->id}'">
+				{$cap->getShip()->name}
+				&nbsp; - &nbsp;
+				<i>{$cap->getShip()->getShipType()}</i>
+			</td>
+			<td onclick="document.location='/profile/capitals/edit/{$cap->id}'">
+			{if $cap->getSolarSystem()}
+				{$cap->getSolarSystem()->getFullname()}
+			{else}
+				<i>Unknown</i>
+			{/if}
+			</td>
+			<td onclick="document.location='/profile/capitals/edit/{$cap->id}'">
+				{$cap->description}
+			</td>
+			<td style="text-align: center;">
+				<a href="/profile/capitals/edit/{$cap->id}"><img src="/images/default/edit.png"></a>
+				<a href="/profile/capitals/delete/{$cap->id}"><img src="/images/default/cross.png"></a>
+			</td>
+		</tr>
+	{/foreach}
+	</table>
+</div>
